# raytracing-weekend

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  hittable.c  hittable.h  hittable_list.c  hittable_list.h  hittable_shared.h  main.c  ray.h  rt_aabb.c  rt_aabb.h  rt_camera.c  rt_camera.h  rt_colour.c  rt_colour.h  rt_hit.c  rt_hit.h  rt_hittable.c  rt_hittable.h  rt_hittable_list.c  rt_hittable_list.h  rt_hittable_shared.h  rt_material.c  rt_material.h  rt_material_dielectric.c  rt_material_dielectric.h  rt_material_diffuse.c  rt_material_diffuse.h  rt_material_diffuse_light.c  rt_material_diffuse_light.h  rt_material_metal.c  rt_material_metal.h  rt_material_shared.h  rt_matrix3.h  rt_perlin.c  rt_perlin.h  rt_ray.h  (+10 more)
.github/workflows/: cmake.yml
hittables/: rt_aa_rect.c  rt_aa_rect.h  rt_box.c  rt_box.h  rt_bvh.c  rt_bvh.h  rt_const_medium.c  rt_const_medium.h  rt_hittable.c  rt_hittable.h  rt_hittable_list.c  rt_hittable_list.h  rt_hittable_shared.h  rt_instance.c  rt_instance.h  rt_moving_sphere.c  rt_moving_sphere.h  rt_sphere.c  rt_sphere.h  rt_triangle.c  rt_triangle.h  rt_triangle_mesh.c  rt_xy_rect.c  rt_xy_rect.h
materials/: rt_material.c  rt_material.h  rt_material_dielectric.c  rt_material_dielectric.h  rt_material_diffuse.c  rt_material_diffuse.h  rt_material_diffuse_light.c  rt_material_diffuse_light.h  rt_material_isotropic.c  rt_material_isotropic.h  rt_material_metal.c  rt_material_metal.h  rt_material_shared.h
random/: rt_random.c  rt_random.h
scenes/: rt_scenes.c  rt_scenes.h
textures/: rt_texture.c  rt_texture.h  rt_texture_checker_pattern.c  rt_texture_checker_pattern.h  rt_texture_image.c  rt_texture_image.h  rt_texture_noise.c  rt_texture_noise.h  rt_texture_shared.h  rt_texture_solid_colour.c  rt_texture_solid_colour.h
threads/: rt_sync.h  rt_sync_unix.c  rt_sync_win32.c  rt_thread.h  rt_thread_pool.c  rt_thread_pool.h  rt_thread_pool_unix.c  rt_thread_pool_win32.c  rt_thread_unix.c  rt_thread_win32.c
threads/utils/: rt_queue.h
